deploy no firebase e ajustes

--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="footer">
     <span>
-        Desenvolvido por Valdir Cezar
+        Desenvolvido por Henrique Santos
     </span>
 </mat-toolbar>
